--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "axios": "^0.21.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
@@ -26,7 +27,6 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "husky": "^4.3.0",
-    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.6",
     "prettier": "2.1.2",
@@ -39,5 +39,8 @@
       "pre-push": "yarn lint",
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.5.7"
   }
 }
