--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "@types/node-fetch":  "^2.5.7",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
@@ -39,8 +40,5 @@
       "pre-push": "yarn lint",
       "pre-commit": "pretty-quick --staged"
     }
-  },
-  "devDependencies": {
-    "@types/node-fetch": "^2.5.7"
   }
 }
